--- a/src/index.css
+++ b/src/index.css
@@ -243,6 +243,13 @@ th .player {
   width: 1rem;
 }
 
+.resetIcon {
+  font-size:1.2rem;
+  margin-left: 0.7rem;
+  height: 1rem;
+  width: 1rem;
+}
+
 .winningColorButton {
   display: inline-block;
 }
