Removed unnecessary nonbreaking spaces and stray spaces inserted by prettier, and I added a default 0.5em padding after checkboxes and radio buttons.

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,11 @@ a {
   text-decoration: underline;
 }
 
+/* Add a little bit of space after checkboxes and radio buttons */
+input[type=checkbox], input[type=radio] {
+    margin-right: 0.25em;
+}
+
 /* Only used to colour buttons until I can figure out how to override Bulma colours */
 .apButton {
   background: linear-gradient(
