Added 'magic wand' button below game boards for admins to inject state. Intended only for use on the dev server for debugging. Eventually need to find a way to exclude functions like this from even compiling in production.

--- a/src/index.css
+++ b/src/index.css
@@ -419,3 +419,8 @@ th .player {
   list-style: none;
   margin-left: 0;
 }
+
+/* Raises modal screens so they overlay the move exploration buttons */
+.modal {
+    z-index: 1000;
+}
