--- a/src/index.css
+++ b/src/index.css
@@ -421,6 +421,17 @@ th .player {
 }
 
 /* Raises modal screens so they overlay the move exploration buttons */
+/* Tooltips are z-index 100 to overlay other elements, so modal has to be higher */
 .modal {
     z-index: 1000;
+}
+
+/* For "new chat" indicator */
+.chevron-down {
+    position:absolute;
+    top:100vh;
+    transform:translateY(-100%);
+    width:100%;
+    background-color: var(--secondary-color-2-lighter);
+    z-index: 500;
 }
